Added left style

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,9 @@ img[src$="right"] {
     float: right;
     margin-left: 25px;
   }
+
+img[src$="left"] {
+    display:block;
+    float: left;
+    margin-left: 25px;
+  }
